HW6 done